[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Sam <w@wth.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.1.2"
selene = "^2.0.b4"

[tool.poetry.dev-dependencies]
pylint = "2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
